--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,18 @@
 /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
+
 #map {
-  height: 100%;
+    height: 50%;
+    width: 50%;
+    margin: 0 auto;
 }
 
+
 /* Optional: Makes the sample page fill the window. */
+
 html,
 body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
